@@ -117,6 +117,7 @@ public class Engraving extends CommonSkill
 			target=mob.location().findItem(null, commands.get(0));
 		if((target!=null)&&(CMLib.flags().canBeSeenBy(target,mob)))
 		{
+			/*
 			final Set<MOB> followers=mob.getGroupMembers(new TreeSet<MOB>());
 			boolean ok=false;
 			for(final MOB M : followers)
@@ -125,8 +126,10 @@ public class Engraving extends CommonSkill
 					ok=true;
 			}
 			if(!ok)
+			*/
+			if(target.secretIdentity().indexOf(ItemCraftor.CRAFTING_BRAND_STR_PREFIX)<0)
 			{
-				commonTelL(mob,"You aren't allowed to work on '@x1'.  It must be an item you crafted. ",(commands.get(0)));
+				commonTelL(mob,"You aren't allowed to work on '@x1'.  It must be a crafted item. ",target.name(mob));
 				return false;
 			}
 		}
