@@ -2748,8 +2748,18 @@ is able to speak and make other noises while remaining hidden.
 IMPROVED_PEEK=THIEF_IMPROVEDPEEK
 THIEF_IMPROVEDPEEK=<ABILITY>\
 Example  : \n\r\
-proficiency in this skill allows the thief to peek into the inventories \
+Proficiency in this skill allows the thief to peek into the inventories \
 of higher level persons and creatures.
+
+IREVOKE=SKILL_IMPROVEDREVOKE
+IMPROVED_REVOKE=SKILL_IMPROVEDREVOKE
+SKILL_IMPROVEDREVOKE=<ABILITY>\
+Usage    : IREVOKE [EFFECT NAME] [TARGET] (QUIETLY)\n\r\
+Example  : IREVOKE "SLEEP" BOB\n\r\
+Example  : IREVOKE ALL BOB QUIETLY\n\r\
+Users of magic can revoke specific or multiple magical effects using \
+the improved revoke command.  The revocation can also optionally be \
+done quietly, so no one in the room knows you did it.
 
 FIGHTER_IMPROVEDSHIELDDEFENCE=IMPROVED_SHIELD_DEFENCE
 IMPROVEDSHIELDDEFENCE=IMPROVED_SHIELD_DEFENCE
